--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ dependencies {
     testImplementation 'com.codeborne:selenide:5.19.0'
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-
-    implementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.rest-assured:rest-assured:4.3.0'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
